--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.1",
     "description": "Choose between video or song image on youtube music",
     "icons": {
-        "48": "icons/icon.png"
+        "48": "icons/icon-48.png"
     },
     "content_scripts": [
         {
