--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Youtube Music Video Or Song Image",
+    "name": "Youtube Music Song Image",
     "version": "1.1",
-    "description": "Choose between video or song image on youtube music",
+    "description": "Always use the thumbnail for songs instead of the video. A future feature will let you switch between video and song image. This extension is not guaranteed to work if you have Youtube Premium / Youtube Music Premium.",
     "icons": {
         "48": "icons/icon-48.png"
     },
@@ -12,7 +12,7 @@
                 "*://music.youtube.com/*"
             ],
             "js": [
-                "main.js"
+                "youtube-music-extension.js"
             ]
         }
     ]
